# app/Http/Controllers/PlanHolidayController.php
@@ -13,7 +13,7 @@ class PlanHolidayController extends Controller
      *      path="/api/showPlanHoliday",
      *      summary="Get all plan holidays",
      *      tags={"Plan Holiday"},
-     *      security={{"bearerAuth":{}}},
+     *      security={"passport": {"oauth2":{}}},
      *      @OA\Response(
      *          response=200,
      *          description="Success",
@@ -31,7 +31,7 @@ class PlanHolidayController extends Controller
      *      path="/api/storePlanHoliday",
      *      summary="Store a new plan holiday",
      *      tags={"Plan Holiday"},
-     *      security={{"bearerAuth":{}}},
+     *      security={"passport": {"oauth2":{}}},
      *      @OA\RequestBody(
      *          required=true,
      *          @OA\JsonContent(
@@ -93,7 +93,7 @@ class PlanHolidayController extends Controller
      *      path="/api/showPlanHoliday/{id}",
      *      summary="Get a plan holiday by ID",
      *      tags={"Plan Holiday"},
-     *      security={{"bearerAuth":{}}},
+     *      security={"passport": {"oauth2":{}}},
      *      @OA\Parameter(
      *          name="id",
      *          in="path",
@@ -138,7 +138,7 @@ class PlanHolidayController extends Controller
      *      path="/api/updatePlanHoliday/{id}",
      *      summary="Update a plan holiday by ID",
      *      tags={"Plan Holiday"},
-     *      security={{"bearerAuth":{}}},
+     *      security={"passport": {"oauth2":{}}},
      *      @OA\Parameter(
      *          name="id",
      *          in="path",
@@ -212,7 +212,7 @@ class PlanHolidayController extends Controller
      *      path="/api/deletePlanHoliday/{id}",
      *      summary="Delete a plan holiday by ID",
      *      tags={"Plan Holiday"},
-     *      security={{"bearerAuth":{}}},
+     *      security={"passport": {"oauth2":{}}},
      *      @OA\Parameter(
      *          name="id",
      *          in="path",
